```mermaid
classDiagram
    class Cliente {
        int id
        string nome
        string email
        List~Produto~ favoritos
    }
    class Produto {
        int id
        string titulo
        string imagem
        float preco
        string review
    }
    class Favorito {
        int id
        int cliente_id
        int produto_id
        Produto produto
    }
    Cliente "1" -- "*" Favorito : possui
    Favorito "*" -- "1" Produto : referencia
```
